@@ -44,7 +44,7 @@
     <td>Shows currently loaded kernel modules</td>
     <td class="good">Yes</td>
     <td class="good">Yes</td>
-    <td class="bad">FIXME NONE</td>
+    <td class="good">Yes</td>
   </tr>
   <tr>
     <td>Debug (verbose) mode</td>
@@ -146,7 +146,7 @@
     <td>Bootloader MBR drive selection</td>
     <td class="good">Yes</td>
     <td class="bad">FIXME NONE</td>
-    <td class="bad">FIXME NONE</td>
+    <td class="good">Yes</td>
   </tr>
   <tr>
     <td>Copy CC networking to IP</td>
