@@ -77,7 +77,7 @@
     </td>
 	</tr>
 	<tr>
-		<td>
+		<td valign="top">
       <ul id="steps">
         <li><a href="/webgli">Welcome</a></li>
         <li><a href="/webgli/ClientConfig">Client Config</a></li>
