@@ -1,9 +1,14 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.203 2005/12/04 23:09:37 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.204 2005/12/04 23:50:25 codeman Exp $
 
 *GLI-gtkfe-0.3 (27 Oct 2005)
 
+  4 Dec 2005; Preston Cody <codeman@gentoo.org>
+  webgli_template.html: valign=top on left side.
+  webgli: fix bootloader boot_device. now working.
+  webgli: CC proxy in progress.
+  
   4 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
   added StartupServices screen
   fixed some typos introduced by the CC-to-IP networking code
